# modelcheck

./: README.md  modelcheck.cabal
src/: CCS.hs  Classes.hs  Labels.hs  Model.hs  Modelcheck.hs  Petri.hs  Prop.hs  Tests.hs  TransitionSystem.hs
src/Internal/: HasVars.hs
test/: Spec.hs
